# fastapi-cookiecutter

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{ cookiecutter.project_slug }}/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
{{ cookiecutter.project_slug }}/app/: main.py
{{ cookiecutter.project_slug }}/app/core/: __init__.py  config.py  database.py  logging.py
{{ cookiecutter.project_slug }}/migrations/: README.md  env.py
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_app.py
